--- a/agent-service/docker-compose.yml
+++ b/agent-service/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - "50051:50051"
     environment:
       - OLLAMA_BASE_URL=http://ollama:11434
-      - OLLAMA_MODEL=llama3.2
+      - OLLAMA_MODEL=llama3.2:3b
       - PROMPT_TEMPLATE_PATH=/app/templates/resume_prompt.jinja2
     depends_on:
       ollama:
