--- a/backend/package.json
+++ b/backend/package.json
@@ -8,17 +8,18 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@grpc/grpc-js": "^1.10.8",
+    "@grpc/proto-loader": "^0.7.13",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.22.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
