--- a/agent-service/docker-compose.yml
+++ b/agent-service/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     ports:
       - "50051:50051"
     environment:
+      - PYTHONUNBUFFERED=1
       - OLLAMA_BASE_URL=http://ollama:11434
       - OLLAMA_MODEL=llama3.2:3b
       - PROMPT_TEMPLATE_PATH=/app/templates/resume_prompt.jinja2
