--- a/agent-service/requirements.txt
+++ b/agent-service/requirements.txt
@@ -2,5 +2,6 @@ grpcio>=1.60.0
 grpcio-tools>=1.60.0
 protobuf>=4.25.0
 jinja2>=3.1.0
+langchain>=0.3.0
 langchain-ollama>=0.1.0
 langchain-core>=0.3.0
