--- a/agent-service/Dockerfile
+++ b/agent-service/Dockerfile
@@ -9,7 +9,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Copy and install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt playwright
+RUN python -m playwright install --with-deps chromium
 
 # Copy application code
 COPY . .
